--- a/gn.html
+++ b/gn.html
@@ -1,4 +1,4 @@
 <title>Goodnight</title>
 <meta content="Good night dears" property="og:title">
-<meta content="https://tenor.com/view/cat-kiss-cock-mrekk-vaxei-whitefcat-gif-20435871" property="og:image">
+<meta content="https://media1.tenor.com/images/a196d804305c7e00d5ad3a81b4832828/tenor.gif" property="og:image">
 <meta content="#43B581" data-react-helmet="true" name="theme-color">
